# LinuxAgent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py  system_mcp.py
app/: __init__.py  agent.py  audit.py  config.py  confirmation.py  exceptions.py  policy.py  ssh_executor.py  tools.py
app/config/: policy_rules.yaml  tool_policies.yaml
docs/: demo_video_test_doc_zh.md
tests/: test_file_tools.py  test_task_id_confirmation.py
